fixed z-index issue, added bg overlay for search dropdown

--- a/app/globals.css
+++ b/app/globals.css
@@ -70,6 +70,16 @@
   transition: width 0.5s ease-in-out;
 }
 
+#search-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+  opacity: 0.6;
+  z-index: 1000;
+}
 #search-dropdown {
   background-color: grey;
   position: absolute;
@@ -113,6 +123,7 @@
   width: 10rem;
   height: 10rem;
   overflow: hidden;
+  z-index: -10;
 }
 
 
